tests/error/error17.jan
// error17: Usage of an array, which is not defined

x -> y;

x += z[0]
